--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -59,6 +59,7 @@ body {
   height: 200px;
   border-radius: 100%;
   position: absolute;
+  z-index: 1
 }
 
 .shape-1 {
@@ -119,8 +120,7 @@ body {
 
 .form {
   width: 100%;
-  height: 100%;
-  background-color: rgba(255, 255, 255, 0.13);
+  background-color: rgba(255, 255, 255, 0.07);
   color: white;
   padding: 50px 35px 35px 35px;
   border: 2px solid rgba(255, 255, 255, 0.13);
@@ -130,7 +130,7 @@ body {
   animation-name: form;
   animation-duration: 1s;
   animation-fill-mode: forwards;
-  z-index: 1;
+  z-index: 999;
 }
 
 @keyframes form {
@@ -145,11 +145,11 @@ body {
 .form-title {
   font-size: 32px;
   text-align: center;
-  margin-bottom: 30px;
+  /* margin-bottom: 30px; */
 }
 
 .form-input-1 {
-  margin-bottom: 28px;
+  /* margin-bottom: 28px; */
 }
 
 .form-input-2 {
@@ -184,14 +184,10 @@ body {
   cursor: pointer;
   display: block;
   font-size: 18px;
-  margin-top: 90px;
+  margin-top: 25px;
   transition: all 1s;
 }
 
-.form-submit-btn:hover {
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
-}
 
 @media screen and (max-width: 733px) {
   .container {
